--- a/src/pages/festival/covid.astro
+++ b/src/pages/festival/covid.astro
@@ -8,7 +8,7 @@
 	<Title title="Covid Plan" id="covid" />
 	<div class="content">
 		<Markdown>
-			_Comming soon_
+			_Coming soon_
 		</Markdown>
 	</div>
 </FestivalLayout>
