--- a/src/pages/festival/covid.astro
+++ b/src/pages/festival/covid.astro
@@ -1,7 +1,7 @@
 ---
 	import { Markdown } from 'astro/components'
 	import FestivalLayout from '@layouts/FestivalLayout.astro'
-	import Title from '$components/Title.astro'
+	import Title from '@components/Title.astro'
 ---
 
 <FestivalLayout title="Covid Plan" active="covid">
